genium/src/test/resources/smoke/errors/output/android/jni/com_example_smoke_Errors.h
/*
 *
 * Automatically generated. Do not modify. Your changes will be lost.
 */

#pragma once

#include <jni.h>

#ifdef __cplusplus
extern "C" {
#endif

JNIEXPORT void JNICALL
Java_com_example_smoke_Errors_methodWithErrors(JNIEnv* _jenv, jobject _jinstance);

#ifdef __cplusplus
}
#endif